Adding a creation and edit dialog for the energy sale compensation.
