# solar-backend/src/main/java/moller/solar/solarbackend/controller/EnergySaleCompensationController.java
@@ -19,16 +19,16 @@ public class EnergySaleCompensationController extends AbstractV1BaseController {
     }
 
     @GetMapping(value = "/energy-sale-compensations")
-    public ResponseEntity<List<moller.solarpersistence.openapi.client.model.EnergySaleCompensationEntry>> getAllEnergySaleCompensationEntries() {
+    public ResponseEntity<List<EnergySaleCompensationEntry>> getAllEnergySaleCompensationEntries() {
         return ResponseEntity.of(Optional.of(energySaleCompensationControllerApi.getAllEnergySaleCompensationEntries()));
     }
 
     @PostMapping(value = "/energy-sale-compensations")
     public ResponseEntity<EnergySaleCompensationEntry> createEnergySaleCompensationEntry(@RequestBody EnergySaleCompensationEntryDto energySaleCompensationEntryDto) {
-        moller.solarpersistence.openapi.client.model.EnergySaleCompensationEntry energySaleCompensationEntry = new moller.solarpersistence.openapi.client.model.EnergySaleCompensationEntry.Builder()
+        EnergySaleCompensationEntry energySaleCompensationEntry = new EnergySaleCompensationEntry.Builder()
                 .compensationDate(energySaleCompensationEntryDto.getCompensationDate())
-                .productionFromDate(energySaleCompensationEntryDto.getProductionFrom())
-                .productionToDate(energySaleCompensationEntryDto.getProductionTo())
+                .productionFromDate(energySaleCompensationEntryDto.getProductionFromDate())
+                .productionToDate(energySaleCompensationEntryDto.getProductionToDate())
                 .compensationAmountInMinorUnit(energySaleCompensationEntryDto.getCompensationAmountInMinorUnit())
                 .productionYear(energySaleCompensationEntryDto.getProductionYear())
                 .build();
@@ -36,10 +36,31 @@ public class EnergySaleCompensationController extends AbstractV1BaseController {
         return ResponseEntity.of(Optional.of(energySaleCompensationControllerApi.createEnergySaleCompensationEntry(energySaleCompensationEntry)));
     }
 
+    @PutMapping(value = "/energy-sale-compensations")
+    public ResponseEntity<EnergySaleCompensationEntry> updateEnergySaleCompensationEntry(@RequestBody EnergySaleCompensationEntryDto energySaleCompensationEntryDto) {
+        EnergySaleCompensationEntry energySaleCompensationEntry = new EnergySaleCompensationEntry.Builder()
+                .id(energySaleCompensationEntryDto.getId())
+                .compensationDate(energySaleCompensationEntryDto.getCompensationDate())
+                .productionFromDate(energySaleCompensationEntryDto.getProductionFromDate())
+                .productionToDate(energySaleCompensationEntryDto.getProductionToDate())
+                .compensationAmountInMinorUnit(energySaleCompensationEntryDto.getCompensationAmountInMinorUnit())
+                .productionYear(energySaleCompensationEntryDto.getProductionYear())
+                .build();
+
+        return ResponseEntity.of(Optional.of(energySaleCompensationControllerApi.updateEnergySaleCompensationEntry(energySaleCompensationEntry)));
+    }
+
     @DeleteMapping(value = "/energy-sale-compensations/{id}")
     public ResponseEntity<Integer> deleteEnergySaleCompensationEntry(@PathVariable Integer id) {
         energySaleCompensationControllerApi.deleteEnergySaleCompensationEntry(id);
 
         return ResponseEntity.of(Optional.of(id));
+    }
+
+    @GetMapping(value = "/energy-sale-compensations/{id}")
+    public ResponseEntity<EnergySaleCompensationEntry> getEnergySaleCompensationEntry(@PathVariable Integer id) {
+        EnergySaleCompensationEntry energySaleCompensationEntry = energySaleCompensationControllerApi.getEnergySaleCompensationEntry(id);
+
+        return ResponseEntity.of(Optional.of(energySaleCompensationEntry));
     }
 }
