# solar-persistence-api/src/main/resources/solar-persistence-api-spec.yaml
@@ -209,6 +209,34 @@
             }
           }
         }
+      },
+      "put": {
+        "tags": [
+          "energy-sale-compensation-controller"
+        ],
+        "operationId": "updateEnergySaleCompensationEntry",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/EnergySaleCompensationEntry"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EnergySaleCompensationEntry"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/energy-costs": {
@@ -598,6 +626,35 @@
       }
     },
     "/api/v1/energy-sale-compensations/{id}": {
+      "get": {
+        "tags": [
+          "energy-sale-compensation-controller"
+        ],
+        "operationId": "getEnergySaleCompensationEntry",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EnergySaleCompensationEntry"
+                }
+              }
+            }
+          }
+        }
+      },
       "delete": {
         "tags": [
           "energy-sale-compensation-controller"
